<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Nome da Receita -->
        <TextView
            android:id="@+id/textViewNomeReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/editTextNomeReceita"
            android:text="@string/nome_da_receita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNomeReceita"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/digite_o_nome_da_receita"
            android:inputType="text|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNomeReceita" />

        <!-- Ingredientes -->
        <TextView
            android:id="@+id/textViewIngredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/editTextIngredientes"
            android:text="@string/ingredientes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNomeReceita" />

        <EditText
            android:id="@+id/editTextIngredientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/liste_os_ingredientes"
            android:inputType="textMultiLine"
            android:minLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewIngredientes" />

        <!-- Modo de Preparo -->
        <TextView
            android:id="@+id/textViewModoPreparo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/editTextModoPreparo"
            android:text="@string/modo_de_preparo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextIngredientes" />

        <EditText
            android:id="@+id/editTextModoPreparo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/descreva_o_modo_de_preparo"
            android:inputType="textMultiLine"
            android:minLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewModoPreparo" />

        <!-- Tempo de Preparo -->
        <TextView
            android:id="@+id/textViewTempoPreparo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/radioGroupTempoPreparo"
            android:text="@string/tempo_de_preparo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextModoPreparo" />

        <RadioGroup
            android:id="@+id/radioGroupTempoPreparo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTempoPreparo">

            <RadioButton
                android:id="@+id/radioButtonMenosDe30Min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos_de_30_min" />

            <RadioButton
                android:id="@+id/radioButtonDe30a60Min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de_30_min_1h" />

            <RadioButton
                android:id="@+id/radioButtonMaisDe1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mais_de_1h" />
        </RadioGroup>

        <!-- Categoria -->
        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/spinnerCategoria"
            android:text="@string/categoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupTempoPreparo" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/categorias"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCategoria" />

        <!-- Favorita -->
        <CheckBox
            android:id="@+id/checkBoxFavorita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/marcar_como_favorita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCategoria" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
